# helix-rpc

./: .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  test.sh
.github/workflows/: ci-cpp.yml  ci-go.yml  ci-integration.yml  ci-java.yml  ci-node.yml  ci-python.yml  ci-rust.yml  ci.yml  docs.yml  release.yml
architecture/: index.html
assets/: extra.css
benchmarks/: fastapi_bench.txt  fastapi_server.py  gateway_bench.txt  go.mod  go.sum  grpc_gateway_server.go  helix_bench.txt  helix_server.go  index.html  run_benchmarks.sh
blog/: index.html
blog/deep-dive-advanced-optimizations/: index.html
blog/helix-vs-alternatives/: index.html
blog/introducing-helix-rpc/: index.html
compiler/: go.mod  main.go
compiler/ast/: ast.go
compiler/codegen/: cpp_generator.go  go_generator.go  java_generator.go  node_generator.go  openapi_generator.go  python_generator.go  rust_generator.go
compiler/compat/: checker.go  checker_test.go  thrift_transpiler.go
compiler/k8s/: controller.go  controller_test.go
compiler/linter/: linter.go
compiler/parser/: parser_test.go  proto_parser.go  thrift_parser.go
containers/: Dockerfile.go  Dockerfile.rust  docker-compose.yaml  sysctl.conf
deployments/: aws-ecs.tf  crd.yaml  gcp-cloudrun.tf  k8s-manifest.yaml
deployments/traefik/: helix-dynamic.yml
developer-guide/: index.html
docs/: architecture.md  benchmarks.md  developer-guide.md  enterprise-concerns.md  examples.md  features.md  index.md  integrations.md  languages.md  llm-serving.md  migration-guide.md  setup-configuration.md  tutorials.md
docs/blog/: deep-dive-advanced-optimizations.md  helix-vs-alternatives.md  index.md  introducing-helix-rpc.md  multi-protocol-architecture.md  polymorphic-jit-transpilation.md
docs/events/: cloudevents.md
docs/mesh/: linkerd.md
enterprise-concerns/: index.html
envoy-filter/src/: lib.rs
envoy-wasm-filter/: Cargo.toml  envoy-config.yaml
envoy-wasm-filter/src/: lib.rs
examples/: index.html
examples/frontend-chat-ui/: README.md  app.js  index.css  index.html
examples/go-dynamic-batcher/: README.md  go.mod  go.sum  main.go
examples/go-resilience/: go.mod  go.sum  main.go
examples/llm-streaming/: model.py  server.py
examples/node-unified-server/: README.md  client.ts  generated.ts  package.json  schema.proto  server.ts  tsconfig.json
examples/python-dynamic-batcher/: main.py
examples/python-resilience/: main.py
examples/rust-ai-gateway/: Cargo.toml  README.md
examples/rust-ai-gateway/src/: main.rs
extensions/helix-operator/: AGENTS.md
extensions/kafka-bridge/: go.mod
extensions/kong-plugin/: main.go
features/: index.html
firecracker/: config.json  setup_microvm.sh
infra/: azure-container-apps.tf  grafana-dashboard.json  prometheus-alerts.yaml
integration-tests/go-go/: benchmark_test.go  cross_lang_test.go  e2e_test.go  flatbuffers_test.go  go.mod  go.sum  production_features_test.go  transcoding_test.go
integration-tests/go-python-ai/: go.mod  go.sum  main.go
integration-tests/node-node/: generated.ts  package.json  tsconfig.json
integration-tests/rust-python-pyo3/: model.py
integration-tests/rust-python-stream/: model.py
integration-tests/rust-rust/: Cargo.toml
integration-tests/rust-rust/src/: generated.rs  main.rs
integration-tests/schema/: generated.py  test.proto
integrations/: index.html
integrations/envoy-filter/: Cargo.toml
integrations/helix-operator/: Makefile  PROJECT  README.md  go.mod
integrations/kafka-bridge/: main.go
integrations/kong-plugin/: go.mod
languages/: index.html
llm-serving/: index.html
runtime-go/: balancer.go  compression.go  config.go  debug.go  debug_ui.go  errors.go  event_helpers.go  go.mod  go.sum  grpc_handler.go  logging.go  metadata.go  metrics.go  metrics_test.go  ratelimit.go  resilience_test.go  resolver_consul.go  retry.go  scalability_test.go  sniffer.go  telemetry.go  thrift_handler.go
runtime-node/src/: metrics.ts  retry.ts
runtime-python/: README.md  chat_completion_pb2.py  pyproject.toml
runtime-python/helix_rt/: auth.py  batching.py  config.py  errors.py  server.py  telemetry.py
runtime-python/tests/: test_resilience.py
runtime-rust/: Cargo.toml  README.md
runtime-rust/src/: auth.rs  batching.rs  client_pool.rs  compression.rs  config.rs  deadline.rs  errors.rs  health.rs  lib.rs  metadata.rs  metrics.rs  pyo3_runner.rs  ratelimit.rs  resolver.rs  retry.rs  server.rs  shm_transport.rs  sniffer.rs  telemetry.rs  tests_resilience.rs
runtimes/cpp/: CMakeLists.txt
runtimes/cpp/build_crypto/: CMakeCache.txt  Makefile  cmake_install.cmake  test_optimization  test_runtime
runtimes/cpp/include/: KafkaAsyncSink.h  MemcachedCache.h  RabbitMQAsyncSink.h  RedisRateLimiter.h
runtimes/cpp/include/helix/: balancer.h  compression.h  deadline.h  gateway.h  health.h  kms.h  multiplexer.h  quic_transport.h  sniffer.h  tensor.h  vault.h
runtimes/cpp/tests/: test_helix_generated.h  test_optimization  test_optimization.cpp  test_runtime  test_runtime.cpp
runtimes/go/: auth.go  (+35 more)
runtimes/python/: chat_completion_pb2_grpc.py  pyproject.toml  requirements.txt  server.py
runtimes/python/helix_rt/: __init__.py  agent.py  balancer.py  cache.py  config.py  db_helpers.py  ebpf.py  event_helpers.py  gateway.py  kafka.py  kms.py  metrics.py  multiplexer.py  quic_transport.py  rabbitmq.py  ratelimit.py  resolver.py  retry.py  server.py  tensor.py  vault.py
runtimes/python/tests/: test_cache.py  test_kafka.py  test_rabbitmq.py  test_ratelimit.py  test_resilience.py  test_websocket.py
runtimes/rust/: Cargo.toml  patch_server.py
runtimes/rust/src/: auth.rs  batching.rs  cache.rs  client_pool.rs  deadline.rs  ebpf.rs  gateway.rs  health.rs  kafka.rs  lib.rs  metrics.rs  quic_transport.rs  rabbitmq.rs  ratelimit.rs  resolver.rs  retry.rs  server.rs  shm_transport.rs  sniffer.rs  tests_resilience.rs  websocket.rs
runtimes/rust/src/crypto/: kms.rs  mod.rs  vault.rs
runtimes/rust/tests/: websocket_test.rs
search/: search_index.json
setup-configuration/: index.html
tutorials/: index.html
(+155 files in other folders)
