[package]
name = "helix-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.4"
thrift = "0.17"
prost = "0.11"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
