[package]
name = "helix-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.4"
thrift = "0.17"
prost = "0.11"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
flate2 = "1.0"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
tokio-util = { version = "0.7", features = ["rt"] }
pyo3 = { version = "0.23", features = ["auto-initialize", "abi3-py310"] }
