[package]
name = "rust-rust-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
prost = "0.11"
thrift = "0.17"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
helix-rt = { path = "../../runtimes/rust" }
hyper = { version = "0.14", features = ["full"] }
bytes = "1.4"
rcgen = "0.11"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
hyper-rustls = { version = "0.24", features = ["http2"] }
