[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helix-rt"
version = "0.1.0"
authors = [
  { name="Helix RPC Authors", email="authors@helixrpc.dev" },
]
description = "A high-performance multi-protocol AI RPC gateway (gRPC, Thrift, HTTP/JSON, SSE)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
tensor = ["numpy>=1.24.0"]

[project.urls]
"Homepage" = "https://github.com/helixrpc/helix-rpc"
"Documentation" = "https://helixrpc.github.io/helix-rpc/"
"Bug Tracker" = "https://github.com/helixrpc/helix-rpc/issues"
"Changelog" = "https://github.com/helixrpc/helix-rpc/releases"
