[package]
name = "helix-rt"
version = "0.1.0"
edition = "2021"
authors = ["Helix RPC Authors <authors@helixrpc.dev>"]
description = "A high-performance AI API Gateway and Dynamic Batching framework."
license = "MIT"
repository = "https://github.com/helixrpc/helix-rpc"
readme = "README.md"
keywords = ["ai", "rpc", "grpc", "batching"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
bytes = "1.4"
thrift = "0.17"
prost = "0.11"
async-trait = "0.1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
socket2 = "0.5"
flate2 = "1.0"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
tokio-util = { version = "0.7", features = ["rt", "compat"] }
pyo3 = { version = "0.23", features = ["auto-initialize", "abi3-py310"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = "0.32.1"
rand = "0.10.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
simd-json = "0.14"
mimalloc = "0.1"
base64 = "0.21"
hyper-tungstenite = "0.9"
futures-util = "0.3"
lapin = "4.10.0"
tokio-amqp = "2.0.0"
redis = { version = "0.23", features = ["tokio-comp"] }
memcache-async = "0.10.1"
sha2 = "0.10"

hex = "0.4"

[target.'cfg(windows)'.dependencies]
rdkafka = { version = "0.39.0", features = ["cmake-build"] }

[target.'cfg(not(windows))'.dependencies]
rdkafka = "0.39.0"

[dev-dependencies]
tokio-tungstenite = "0.18"
tokio-stream = { version = "0.1", features = ["net"] }



[dependencies.aws-sdk-kms]
version = "0.28.0"
optional = true

[dependencies.aws-config]
version = "0.55.0"
optional = true

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]
default-features = false
optional = true

[features]
default = []
crypto = ["aws-sdk-kms", "aws-config", "reqwest"]
